--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "av>=14.4.0",
     "google-genai>=1.15.0",
+    "opencv-python>=4.11.0.86",
+    "pandas>=2.2.3",
     "pydantic>=2.11.4",
 ]
