--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "av>=14.4.0",
     "google-genai>=1.15.0",
+    "matplotlib>=3.10.3",
+    "moviepy==1.0.3",
     "opencv-python>=4.11.0.86",
     "pandas>=2.2.3",
     "pydantic>=2.11.4",
+    "seaborn>=0.13.2",
 ]
