--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ dependencies = [
     "matplotlib>=3.10.3",
     "moviepy==1.0.3",
     "opencv-python>=4.11.0.86",
+    "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pydantic>=2.11.4",
     "seaborn>=0.13.2",
+    "scikit-learn>=1.3.0",
+    "scipy>=1.11.0",
+    "google-cloud-storage>=3.1.1",
 ]
