--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,6 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "scipy>=1.11.0",
     "google-cloud-storage>=3.1.1",
+    "openai>=1.95.0",
+    "psutil>=7.0.0",
 ]
